# mpi_voxel

./: CMakeLists.txt  README.md  gen_tfrecord.py  gen_tfrecord2.py  history.txt  localpath.py  maingl.cpp  memory_saving_gradients.py  model4.py  model_LGD.py  model_LGD2.py  model_PSV.py  model_muti_mpi.py  model_muti_res.py  model_orbit_withoutbox.py  model_single_dip.py  model_single_mpi.py  model_single_withoutbox.py  script.py  script2.py  test_proj.py  utils.py  view_gen.py  viz.cpp  viz.h
